Redesign and Organize portfolio - Edited About Page - Add Software carousel - Delete Services and Resume pages - Optimize Portfolio Page

--- a/portfolio/cube_rubic/details.html
+++ b/portfolio/cube_rubic/details.html
@@ -70,7 +70,14 @@
               <li><strong>Project date</strong>: 12 May, 2023</li>
               <li><strong>Project URL</strong>: <a href="rubik_cube.mp4">Show now</a></li>
             </ul>
-
+            <h3 class="skill-type">Skills</h3>
+            <ul class="skill-type">
+              <li>3D Modeling</li>
+              <li>3D Motion Design</li>
+              <li>Enviroment Design</li>
+              <li>VFX Layout</li>
+              <li>VFX Composition</li>
+            </ul>
             <p>
             </p>
           </div>
