--- a/portfolio/livingroom/details.html
+++ b/portfolio/livingroom/details.html
@@ -69,7 +69,13 @@
               <li><strong>Client</strong>: Personal Project</li>
               <li><strong>Project date</strong>: 2 June, 2021</li>
             </ul>
-
+            <h3 class="skill-type">Skills</h3>
+            <ul class="skill-type">
+              <li>3D Modeling</li>
+              <li>Enviroment Design</li>
+              <li>VFX Layout</li>
+              <li>VFX Composition</li>
+            </ul>
             <p>
             </p>
           </div>
