--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/css/owl.carousel.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -45,14 +46,14 @@
       <h1><a href="index.html">Daniel L. Licea</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>Digital Artist</span> and <span>3D generalist</span></h2>
+      <h2>I'm a passionate <span>3D Generalist</span> freelance</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link active" href="#header">Home</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
-          <li><a class="nav-link" href="#resume">Resume</a></li>
-          <li><a class="nav-link" href="#services">Services</a></li>
+          <!-- <li><a class="nav-link" href="#resume">Resume</a></li> -->
+          <!-- <li><a class="nav-link" href="#services">Services</a></li> -->
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
@@ -60,8 +61,6 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a> -->
-        <!-- <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
         <a href="https://www.instagram.com/dany.lab" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/daniel-l-licea-4b6828299" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
@@ -85,14 +84,13 @@
           <img src="assets/img/me.jpg" class="img-fluid" style="border-radius: 200px;" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Digital Artist &amp; 3D Generalist</h3>
+          <h3>3D Generalist</h3>
           <p class="fst-italic">
-            I am a digital artist specialiced in product motion design.
+            A digital artist specialiced in product motion design and enviroment design
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li> -->
                 <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>texelhack.github.io</span></li> -->
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+53 5 1586389</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Santiago de Cuba, Cuba</span></li>
@@ -108,53 +106,25 @@
             </div>
           </div>
           <p>
-            I like as product design and architectural renders. I am a creative and perfectionist person with a innovation capacity and discover new methods of efficiently work.
+            Hello. My name is Daniel L. Licea. I have experience in audiovisual production for social media marketing. I like challenges. I am quite creativo and innovative. I prefer to do things different and unique. You can maintain several projects at the time without delay. I love VFX and cinema.
           </p>
         </div>
       </div>
 
     </div><!-- End About Me -->
-
-    <!-- ======= Counts ======= -->
-    <div class="counts container">
-<!-- 
-      <div class="row">
-
-        <div class="col-lg-3 col-md-6">
-          <div class="count-box">
-            <i class="bi bi-emoji-smile"></i>
-            <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Happy Clients</p>
+    <!-- Logo Begin -->
+    <div class="logo spad">
+      <div class="container">
+          <div class="logo__carousel owl-carousel">
+              <a href="#" class="logo__item"><img src="assets/img/soft/blender.png" alt=""></a>
+              <a href="#" class="logo__item"><img src="assets/img/soft/davinci.png" alt=""></a>
+              <a href="#" class="logo__item"><img src="assets/img/soft/photoshop.png" alt=""></a>
+              <a href="#" class="logo__item"><img src="assets/img/soft/nuke.png" alt=""></a>
+              <a href="#" class="logo__item"><img src="assets/img/soft/makehuman.png" alt=""></a>
           </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
-          <div class="count-box">
-            <i class="bi bi-journal-richtext"></i>
-            <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Projects</p>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-          <div class="count-box">
-            <i class="bi bi-headset"></i>
-            <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Hours Of Support</p>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-          <div class="count-box">
-            <i class="bi bi-award"></i>
-            <span data-purecounter-start="0" data-purecounter-end="24" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Awards</p>
-          </div>
-        </div>
-
-      </div> -->
-
-    </div><!-- End Counts -->
+      </div>
+      <!-- Logo End -->
+  </div>
 
     <!-- ======= Skills  ======= -->
     <div class="skills container">
@@ -221,144 +191,6 @@
 
   </section><!-- End About Section -->
 
-  <!-- ======= Resume Section ======= -->
-  <section id="resume" class="resume">
-    <div class="container">
-
-      <div class="section-title">
-        <h2>Resume</h2>
-        <p>Check My Resume</p>
-      </div>
-
-      <div class="row">
-        <div class="col-lg-6">
-          <h3 class="resume-title">Sumary</h3>
-          <div class="resume-item pb-0">
-            <h4>Daniel L. Licea</h4>
-            <p><em>Innovative and deadline-driven Digital Artist with 2+ years of experience designing 3D experiences to marketing material from initial concept to final.</em></p>
-            <p>
-            <ul>
-              <li>Santiago de Cuba, Cuba</li>
-              <li>+53 5 1586389</li>
-              <li>danlab.licea@gmail.com</li>
-            </ul>
-            </p>
-          </div>
-          <a data-filter=".filter-app" href="./sources/Resume.pdf">Download Resume</a>
-          <!-- <h3 class="resume-title">Education</h3>
-          <div class="resume-item">
-            <h4>Graphic Design Curse</h4>
-            <h5>2020 - 2021 (6 mons)</h5>
-            <p><em></em></p>
-            <p>Independient </p>
-          </div>
-          <div class="resume-item">
-            <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-            <h5>2010 - 2014</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
-          </div> -->
-        </div>
-        <div class="col-lg-6">
-          <h3 class="resume-title">Professional Experience</h3>
-
-          <div class="resume-item">
-            <h4>Independient Digital Artist</h4>
-            <h5>2021 - Present</h5>
-            <p><em>Hibrid (Remote/Presential)</em></p>
-            <p>
-            <ul>
-              <li>Videography services to good clients</li>
-              <li>Event Photography or Photography for Social Media</li>
-              <li>Supervise the height quality and accuracy of the service</li>
-              <li>Product motion design and infographics to independient Business</li>
-            </ul>
-            </p>
-          </div>
-
-          <div class="resume-item">
-            <h4>Graphic Designer</h4>
-            <h5>2019 - 2021</h5>
-            <p><em>Salmos Studio Photography</em></p>
-            <p>
-            <ul>
-              <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-              <li>Photography Retouch</li>
-              <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-              <li>Incorporate videography services</li>
-            </ul>
-            </p>
-          </div>
-
-        </div>
-      </div>
-
-    </div>
-  </section><!-- End Resume Section -->
-
-  <!-- ======= Services Section ======= -->
-  <section id="services" class="services">
-    <div class="container">
-
-      <div class="section-title">
-        <h2>Services</h2>
-        <p>My Services</p>
-      </div>
-
-      <div class="row">
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bxl-dribbble"></i></div>
-            <h4><a href="">3D Product Motion Design</a></h4>
-            <p>Creative and innovative motion design to products</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-slideshow"></i></div>
-            <h4><a href="">Videography</a></h4>
-            <p>Event, musical clips, social media, and more. Production and post-production with curious but complex vfx.</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-file"></i></div>
-            <h4><a href="">Photography</a></h4>
-            <p>Event Photography or Digital Photography to social media</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-world"></i></div>
-            <h4><a href="">Graphic Design</a></h4>
-            <p>Logos, infographics, photo retouch, presentations, banners, web, and more</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-tachometer"></i></div>
-            <h4><a href="">VFX Supervise &amp; Composition</a></h4>
-            <p>VFX composition with Nuke and OnSet supervice or source capture</p>
-          </div>
-        </div>
-
-        <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-arch"></i></div>
-            <h4><a href=""></a></h4>
-            <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
-          </div>
-        </div> -->
-
-      </div>
-
-    </div>
-  </section><!-- End Services Section -->
-
   <!-- ======= Portfolio Section ======= -->
   <section id="portfolio" class="portfolio">
     <div class="container">
@@ -373,14 +205,27 @@
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-motion">Motion</li>
-            <li data-filter=".filter-design">Design</li>
-            <li data-filter=".filter-photography">Photography</li>
+            <li data-filter=".filter-enviroment">Enviroment</li>
+            <!-- <li data-filter=".filter-product">Products</li> -->
           </ul>
         </div>
       </div>
 
       <div class="row portfolio-container">
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-enviroment">
+          <div class="portfolio-wrap">
+            <img src="portfolio/mansion/image01.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Architectural Design</h4>
+              <p>3D Enviroment Design</p>
+              <div class="portfolio-links">
+                <a href="portfolio/mansion/image01.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Architectural Design"><i class="bx bx-plus"></i></a>
+                <a href="portfolio/mansion/details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-motion">
           <div class="portfolio-wrap">
@@ -410,7 +255,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-product">
           <div class="portfolio-wrap"> 
             <img src="portfolio/miniboard/image01.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -422,9 +267,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-enviroment">
           <div class="portfolio-wrap">
             <img src="portfolio/realistic-e/image01.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -438,7 +283,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-enviroment">
           <div class="portfolio-wrap">
             <img src="portfolio/livingroom/image01.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -548,8 +393,10 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
-
+  
   <!-- Template Main JS File -->
+  <script src="assets/js/jquery-3.3.1.min.js"></script>
+  <script src="assets/js/owl.carousel.min.js"></script>
   <script src="assets/js/main.js"></script>
 
 </body>
