--- a/portfolio/hack4u/details.html
+++ b/portfolio/hack4u/details.html
@@ -85,9 +85,19 @@
               <li><strong>Project date</strong>: 31 October, 2023</li>
               <li><strong>Project URL</strong>: <a href="https://www.instagram.com/reel/CzEUQUsA-F3/?igshid=MTQ4MXJzcXhvZGE4NQ==">Click Here</a></li>
             </ul>
-
+            <h3 class="skill-type">Skills</h3>
+            <ul class="skill-type">
+              <li>Product Design</li>
+              <li>Motion Design</li>
+              <li>Product Animation</li>
+              <li>3D Modeling</li>
+              <li>3D Animation</li>
+              <li>Enviroment Design</li>
+              <li>VFX Layout</li>
+              <li>VFX Composition</li>
+            </ul>
             <p>
-              Product motion design of keyboard in collaboration with Hack4u and Josh Design.
+              Product motion design of keyboard in collaboration with Hack4u and Josh Design. 
             </p>
           </div>
 
