--- a/portfolio/mansion/details.html
+++ b/portfolio/mansion/details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Miniboard Design</title>
+  <title>Portfolio Details - Architectural Design</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -47,7 +47,7 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">Miniboard Design</h2>
+            <h2 class="portfolio-title">Architectural Design</h2>
 
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
@@ -58,16 +58,6 @@
                 <div class="swiper-slide">
                   <img src="image02.jpg" alt="">
                 </div>
-                <div class="swiper-slide">
-                  <img src="image03.jpg" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="image04.jpg" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="image05.jpg" alt="">
-                </div>
-
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -77,20 +67,19 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Product Design Design</li>
-              <li><strong>Client</strong>: Anonynous Client</li>
-              <li><strong>Project date</strong>: 27 February , 2023</li>
-              <!-- <li><strong>Project URL</strong>: <a href="https://www.instagram.com/reel/CzEUQUsA-F3/?igshid=MTQ4MXJzcXhvZGE4NQ==">Click Here</a></li> -->
+              <li><strong>Category</strong>: Enviroment Design</li>
+              <li><strong>Client</strong>: Personal Project</li>
+              <li><strong>Project date</strong>: 9 November, 2023</li>
             </ul>
             <h3 class="skill-type">Skills</h3>
             <ul class="skill-type">
-              <li>3D Product Design</li>
               <li>3D Modeling</li>
-              <li>3D Motion Design</li>
+              <li>Enviroment Design</li>
+              <li>VFX Layout</li>
               <li>VFX Composition</li>
             </ul>
             <p>
-              Product design to client for make a mini pedalboard.
+              A personal project for recreate a 3D architectural render realist
             </p>
           </div>
 
