--- a/portfolio/realistic-e/details.html
+++ b/portfolio/realistic-e/details.html
@@ -70,7 +70,13 @@
               <li><strong>Project date</strong>: 15 January, 2022</li>
               <!-- <li><strong>Project URL</strong>: <a href="https://www.instagram.com/reel/CzEUQUsA-F3/?igshid=MTQ4MXJzcXhvZGE4NQ==">Click Here</a></li> -->
             </ul>
-
+            <h3 class="skill-type">Skills</h3>
+            <ul class="skill-type">
+              <li>3D Modeling</li>
+              <li>Enviroment Design</li>
+              <li>VFX Layout</li>
+              <li>VFX Composition</li>
+            </ul>
             <p>
             </p>
           </div>
