--- a/portfolio/hack4u/details.html
+++ b/portfolio/hack4u/details.html
@@ -83,7 +83,7 @@
               <li><strong>Category</strong>: Motion Design</li>
               <li><strong>Client</strong>: Hack4u Academy</li>
               <li><strong>Project date</strong>: 31 October, 2023</li>
-              <li><strong>Project URL</strong>: <a href="https://www.instagram.com/reel/CzEUQUsA-F3/?igshid=MTQ4MXJzcXhvZGE4NQ==">Click Here</a></li>
+              <li><strong>Project URL</strong>: <a href="hack4u_kb_loop_motion.mp4">Show now</a></li>
             </ul>
             <h3 class="skill-type">Skills</h3>
             <ul class="skill-type">
