--- a/portfolio/car_motion_01/details.html
+++ b/portfolio/car_motion_01/details.html
@@ -85,6 +85,7 @@
               <li>3D Motion Design</li>
               <li>Enviroment Design</li>
               <li>Colth Simulation</li>
+              <li>Smoke Simulation</li>
               <li>VFX Layout</li>
               <li>VFX Composition</li>
             </ul>
