Portfolio v2 - Add Portfolio loader in foliodb.js - Add 3 new demos - Optimize - Delete Videos - Load videos from Google Drive - Fix image resize error in details.html - Fix others problems

--- a/index.html
+++ b/index.html
@@ -211,105 +211,9 @@
         </div>
       </div>
 
-      <div class="row portfolio-container">
+      <div id="foliodb" class="row portfolio-container">
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-motion">
-          <div class="portfolio-wrap">
-            <img src="portfolio/car_motion_01/image02.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Car Colth Revelation</h4>
-              <p>3D Motion Design</p>
-              <div class="portfolio-links">
-                <a href="portfolio/car_motion_01/image02.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Architectural Design"><i class="bx bx-plus"></i></a>
-                <a href="portfolio/car_motion_01/details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-enviroment">
-          <div class="portfolio-wrap">
-            <img src="portfolio/mansion/image01.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Architectural Design</h4>
-              <p>3D Enviroment Design</p>
-              <div class="portfolio-links">
-                <a href="portfolio/mansion/image01.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Architectural Design"><i class="bx bx-plus"></i></a>
-                <a href="portfolio/mansion/details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-motion">
-          <div class="portfolio-wrap">
-            <img src="portfolio/hack4u/image01.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Hack4u Red Team Keyboards</h4>
-              <p>3D Product Motion Design</p>
-              <div class="portfolio-links">
-                <a href="portfolio/hack4u/image01.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Hack4u Red Team Keyboards"><i class="bx bx-plus"></i></a>
-                <a href="portfolio/hack4u/details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-motion">
-          <div class="portfolio-wrap"> 
-            <img src="portfolio/cube_rubic/image01.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Rubik Motion</h4>
-              <p>Motion Design</p>
-              <div class="portfolio-links">
-                <a href="portfolio/cube_rubic/image01.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Rubik Motion"><i class="bx bx-plus"></i></a>
-                <a href="portfolio/cube_rubic/details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-product">
-          <div class="portfolio-wrap"> 
-            <img src="portfolio/miniboard/image01.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Miniboard Desing</h4>
-              <p>Product Design</p>
-              <div class="portfolio-links">
-                <a href="portfolio/miniboard/image01.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Miniboard Motion"><i class="bx bx-plus"></i></a>
-                <a href="portfolio/miniboard/details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div> -->
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-enviroment">
-          <div class="portfolio-wrap">
-            <img src="portfolio/realistic-e/image01.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Realistic Enviroment Design</h4>
-              <p>3D Enviroment Design</p>
-              <div class="portfolio-links">
-                <a href="portfolio/realistic-e/image01.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Realistic Enviroment Design"><i class="bx bx-plus"></i></a>
-                <a href="portfolio/realistic-e/details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-enviroment">
-          <div class="portfolio-wrap">
-            <img src="portfolio/livingroom/image01.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Living Room Design</h4>
-              <p>3D Enviroment Design</p>
-              <div class="portfolio-links">
-                <a href="portfolio/livingroom/image01.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Living Room Desing"><i class="bx bx-plus"></i></a>
-                <a href="portfolio/livingroom/details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
+        <!-- Automatic Fill -->
 
       </div>
 
@@ -411,6 +315,7 @@
   <!-- Template Main JS File -->
   <script src="assets/js/jquery-3.3.1.min.js"></script>
   <script src="assets/js/owl.carousel.min.js"></script>
+  <script src="portfolio/foliodb.js"></script>
   <script>
   /*------------------
       Logo Slider
@@ -438,6 +343,8 @@
           }
       }
   });
+  
+  folio_load(works);
   </script>
   <script src="assets/js/main.js"></script>
 
