--- a/portfolio/details.html
+++ b/portfolio/details.html
@@ -1,3 +1,8 @@
+<!-- {name} -->
+<!-- {categury} -->
+<!-- {client} -->
+<!-- {date} -->
+<!-- {url} -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +10,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Hack4u Red Team Keyboards</title>
+  <title>Portfolio Details - {name}</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -47,7 +52,7 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">Hack4u Red Team Keyboards</h2>
+            <h2 class="portfolio-title">{name}</h2>
 
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
@@ -57,18 +62,6 @@
                 </div>
                 <div class="swiper-slide">
                   <img src="image02.jpg" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="image03.jpg" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="image04.jpg" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="image05.jpg" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="image06.jpg" alt="">
                 </div>
 
               </div>
@@ -80,14 +73,18 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Motion Design</li>
-              <li><strong>Client</strong>: Hack4u Academy</li>
-              <li><strong>Project date</strong>: 31 October, 2023</li>
-              <li><strong>Project URL</strong>: <a href="https://www.instagram.com/reel/CzEUQUsA-F3/?igshid=MTQ4MXJzcXhvZGE4NQ==">Click Here</a></li>
+              <li><strong>Category</strong>: {category}</li>
+              <li><strong>Client</strong>: {client}</li>
+              <li><strong>Project date</strong>: {date}</li>
+              <li><strong>Project URL</strong>: <a href="{url}">Click Here</a></li>
+            </ul>
+            <h3 class="skill-type">Skills</h3>
+            <ul class="skill-type">
+              <li>Skill</li>
             </ul>
 
             <p>
-              Product motion design of keyboard in collaboration with Hack4u and Josh Design.
+              <!-- Description -->
             </p>
           </div>
 
