New Project - New Project add - add status property - add style comming-soon

--- a/index.html
+++ b/index.html
@@ -86,27 +86,28 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>3D Generalist</h3>
           <p class="fst-italic">
-            A digital artist specialiced in product motion design and enviroment design
+            Innovation is the ability to combine creativity with everyday life.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
                 <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>texelhack.github.io</span></li> -->
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+53 5 1586389</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Santiago de Cuba, Cuba</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Country:</strong> <span>Cuba</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>19</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>Independient</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>19</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>Independient</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>danlab.licea@gmail.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Linkedin:</strong> <span><a href="https://www.linkedin.com/in/daniel-l-licea-4b6828299">daniel-l-licea-4b6828299</a></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
             </div>
           </div>
           <p>
-            Hello. My name is Daniel L. Licea. I have experience in audiovisual production for social media marketing. I like challenges. I am quite creativo and innovative. I prefer to do things different and unique. You can maintain several projects at the time without delay. I love VFX and cinema.
+            My name is Daniel L. Licea, I am a digital artist with experience in audiovisual production, photography, CGI and VFX projects.  I have project management knowledge.  I am in a constant process of artistic, scientific and technological learning, which allows me to be very creative and innovative.
           </p>
         </div>
       </div>
@@ -119,6 +120,7 @@
               <a href="#" class="logo__item"><img src="assets/img/soft/blender.png" alt=""></a>
               <a href="#" class="logo__item"><img src="assets/img/soft/davinci.png" alt=""></a>
               <a href="#" class="logo__item"><img src="assets/img/soft/photoshop.png" alt=""></a>
+              <a href="#" class="logo__item"><img src="assets/img/soft/after.png" alt=""></a>
               <a href="#" class="logo__item"><img src="assets/img/soft/nuke.png" alt=""></a>
               <a href="#" class="logo__item"><img src="assets/img/soft/makehuman.png" alt=""></a>
           </div>
@@ -126,68 +128,65 @@
       <!-- Logo End -->
   </div>
 
-    <!-- ======= Skills  ======= -->
-    <div class="skills container">
+<!-- ======= Interests ======= -->
+    <div class="interests container">
 
       <div class="section-title">
-        <h2>Skills</h2>
+        <h2>Interests</h2>
       </div>
 
-      <div class="row skills-content">
-
-        <div class="col-lg-6">
-
-          <div class="progress">
-            <span class="skill">Graphic Design <i class="val">90%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
+      <div class="row">
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+            <i class="ri-camera-line" style="color: #ffbb2c;"></i>
+            <h3>Photography</h3>
           </div>
-
-          <div class="progress">
-            <span class="skill">3D Modeling<i class="val">85%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">Animation<i class="val">80%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
         </div>
-
-        <div class="col-lg-6">
-
-          <div class="progress">
-            <span class="skill">VFX Composition<i class="val">95%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
+        <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+          <div class="icon-box">
+            <i class="ri-film-line" style="color: #5578ff;"></i>
+            <h3>Video Production</h3>
           </div>
-
-          <div class="progress">
-            <span class="skill">Photoshop<i class="val">100%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">Edit Videos <i class="val">95%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
         </div>
-
+        <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+          <div class="icon-box">
+            <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
+            <h3>Productivity</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
+          <div class="icon-box">
+            <i class="ri-music-line" style="color: #e361ff;"></i>
+            <h3>Music</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i class="ri-computer-line" style="color: #47aeff;"></i>
+            <h3>Technology</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i class="ri-gradienter-line" style="color: #ffa76e;"></i>
+            <h3>Science</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i class="ri-plane-line" style="color: #11dbcf;"></i>
+            <h3>Travel</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i class="ri-box-2-line" style="color: #4233ff;"></i>
+            <h3>CGI</h3>
+          </div>
+        </div>
       </div>
 
-    </div><!-- End Skills -->
+    </div><!-- End Interests -->
 
   </section><!-- End About Section -->
 
@@ -206,7 +205,7 @@
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-motion">Motion</li>
             <li data-filter=".filter-enviroment">Enviroment</li>
-            <!-- <li data-filter=".filter-product">Products</li> -->
+            <li data-filter=".filter-architectural">Architectural</li>
           </ul>
         </div>
       </div>
