--- a/portfolio/20231221/details.html
+++ b/portfolio/20231221/details.html
@@ -1,3 +1,8 @@
+<!-- Forest Sunset -->
+<!-- Enviroment Design -->
+<!-- Personal Project -->
+<!-- December 12, 2023 -->
+<!-- https://drive.google.com/file/d/12Teg1iefBp5-iX0JsABDqzwdS_UJbLuJ/preview -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +10,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Miniboard Design</title>
+  <title>Portfolio Details - Forest Sunset</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -47,7 +52,7 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">Miniboard</h2>
+            <h2 class="portfolio-title">Forest Sunset</h2>
 
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
@@ -61,12 +66,6 @@
                 <div class="swiper-slide">
                   <img src="image03.jpg" alt="">
                 </div>
-                <div class="swiper-slide">
-                  <img src="image04.jpg" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="image05.jpg" alt="">
-                </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -77,20 +76,21 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Product Design Design</li>
-              <li><strong>Client</strong>: Anonynous Client</li>
-              <li><strong>Project date</strong>: 27 February , 2023</li>
-              <!-- <li><strong>Project URL</strong>: <a href="https://www.instagram.com/reel/CzEUQUsA-F3/?igshid=MTQ4MXJzcXhvZGE4NQ==">Click Here</a></li> -->
+              <li><strong>Category</strong>: Enviroment Design</li>
+              <li><strong>Client</strong>: Personal Project</li>
+              <li><strong>Project date</strong>:December 22, 2023</li>
+              <li><strong>Project URL</strong>: <a href="https://drive.google.com/file/d/12Teg1iefBp5-iX0JsABDqzwdS_UJbLuJ/preview">Click Here</a></li>
             </ul>
             <h3 class="skill-type">Skills</h3>
             <ul class="skill-type">
-              <li>3D Product Design</li>
-              <li>3D Modeling</li>
-              <li>3D Motion Design</li>
-              <li>VFX Composition</li>
+              <li>Modeling</li>
+              <li>Layout</li>
+              <li>Lighting</li>
+              <li>Video Edit</li>
             </ul>
+
             <p>
-              Product design to client for make a mini pedalboard.
+              Sunset recreation in a forest
             </p>
           </div>
 
