--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <li><a class="nav-link" href="#about">About</a></li>
           <!-- <li><a class="nav-link" href="#resume">Resume</a></li> -->
           <!-- <li><a class="nav-link" href="#services">Services</a></li> -->
+          <li><a class="nav-link" href="#demo">DemoReel</a></li>
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
@@ -190,10 +191,24 @@
 
   </section><!-- End About Section -->
 
+  <!-- ======== DemoReels Section ======= -->
+  <section id="demo" class="demo">
+    <div class="container">
+      <div class="section-title">
+        <h2>Portfolio</h2>
+        <p>DemoReel</p>
+      </div>
+      <div id="demoreel">
+        <iframe src="https://player.vimeo.com/video/900145768?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="1920" height="700" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="DemoReel_2023"></iframe>
+      </div>
+    </div>
+  </section>
+  <!-- ========= End DemoRels ========== -->
+
   <!-- ======= Portfolio Section ======= -->
   <section id="portfolio" class="portfolio">
     <div class="container">
-
+      
       <div class="section-title">
         <h2>Portfolio</h2>
         <p>My Works</p>
@@ -209,7 +224,7 @@
           </ul>
         </div>
       </div>
-
+      
       <div id="foliodb" class="row portfolio-container">
 
         <!-- Automatic Fill -->
