Comming-soon Joyo Zombie II

--- a/portfolio/20240115/details.html
+++ b/portfolio/20240115/details.html
@@ -1,7 +1,7 @@
-<!-- {name} -->
-<!-- {category} -->
-<!-- {client} -->
-<!-- {date} -->
+<!-- Joyo Zombie II -->
+<!-- 3D Product Design -->
+<!-- Joyo -->
+<!-- 15 January, 2024 -->
 <!-- {url} -->
 <!DOCTYPE html>
 <html lang="en">
@@ -10,7 +10,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - {name}</title>
+  <title>Portfolio Details - Joyo Zombie II</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -52,7 +52,7 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">{name}</h2>
+            <h2 class="portfolio-title">Joyo Zombie II</h2>
 
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
@@ -62,6 +62,15 @@
                 </div>
                 <div class="swiper-slide">
                   <img src="image02.jpg" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="image03.jpg" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="image04.jpg" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="image05.jpg" alt="">
                 </div>
 
               </div>
@@ -73,18 +82,22 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: {category}</li>
-              <li><strong>Client</strong>: {client}</li>
-              <li><strong>Project date</strong>: {date}</li>
+              <li><strong>Category</strong>: 3D Product Animation</li>
+              <li><strong>Client</strong>: Joyo</li>
+              <li><strong>Project date</strong>: 15 January, 2024</li>
               <li><strong>Project URL</strong>: <a href="{url}">Click Here</a></li>
             </ul>
             <h3 class="skill-type">Skills</h3>
             <ul class="skill-type">
-              <li>Skill</li>
+              <li>Modeling</li>
+              <li>Lighting</li>
+              <li>Animation</li>
+              <li>Graphic Design</li>
+              <li>VFX Composition</li>
             </ul>
 
             <p>
-              <!-- Description -->
+              Product Animation for marketing and promotional videos.
             </p>
           </div>
 
