--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-motion">Motion</li>
+            <li data-filter=".filter-product">Product</li>
             <li data-filter=".filter-enviroment">Enviroment</li>
             <li data-filter=".filter-architectural">Architectural</li>
           </ul>
