New Project Joyo Zombie II

--- a/portfolio/20240115/details.html
+++ b/portfolio/20240115/details.html
@@ -2,7 +2,7 @@
 <!-- 3D Product Design -->
 <!-- Joyo -->
 <!-- 15 January, 2024 -->
-<!-- {url} -->
+<!-- https://drive.google.com/file/d/1osL_p8W1FZawhbPsX7hlSTzMlUem-uZA/preview -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -69,9 +69,6 @@
                 <div class="swiper-slide">
                   <img src="image04.jpg" alt="">
                 </div>
-                <div class="swiper-slide">
-                  <img src="image05.jpg" alt="">
-                </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -85,7 +82,7 @@
               <li><strong>Category</strong>: 3D Product Animation</li>
               <li><strong>Client</strong>: Joyo</li>
               <li><strong>Project date</strong>: 15 January, 2024</li>
-              <li><strong>Project URL</strong>: <a href="{url}">Click Here</a></li>
+              <li><strong>Project URL</strong>: <a href="https://drive.google.com/file/d/1osL_p8W1FZawhbPsX7hlSTzMlUem-uZA/preview">Click Here</a></li>
             </ul>
             <h3 class="skill-type">Skills</h3>
             <ul class="skill-type">
